fix: do not change the latest cell's height of a row, and fix the cell overflow problem

--- a/src/design-grid.scss
+++ b/src/design-grid.scss
@@ -201,6 +201,7 @@ $row-header-width: 30px;
           >div {
             height: inherit;
             box-sizing: border-box;
+            overflow: hidden;
             >input[type="text"] {
               @include text-one-row;
               &:disabled {
